WP Movie Ratings changelog:
===========================

HEAD (unreleased)
- small visual tweaks to the widget
- make plugin work with https imdb links

Relase 1.7 (2015-11-19)
- widgetization: added possiblity to display 'Recent ratings' in a widget
- fetch original movie titles from IMDb (ie: use akas.imdb.com instead of just imdb.com) and display links to akas.imdb.com (instead of imdb.com)
- fixed: make movies page pagination links XHTML standards compliant (& => &amp;)
- compatibility/deprecation fixes (some of them at least...)

Release 1.6 (2010-10-14)
- full compatibility with Wordpress 2.7.*, 2.8.*, 2.9.* and 3.0.* (this release breaks compatibility with older versions)
- fixed: when 'only_rated' or 'only_unrated' option was used the 'count' argument the for wp_movie_ratings_show() function was ignored
- removed automatic pingerati.net pinging (pingerati.net is AWOL)
- fixed: fetching movie title from IMDb (after IMDb has changed their website)

Release 1.5 (2008-05-18)
- added option to add movies without rating them (to create a list of owned just not yet seen dvds, for example) (only through the administration panel)
- added option to select all 'only_rated' or 'only_not_rated' movies using the wp_movie_ratings_show() function call
- char_limit option can now be passed as a parameter to the wp_movie_ratings_show() function call
- fixed problems making the movie reviews pages non XHTML compliant
- fixed error which prevented certain users from activating the plugin (the database table was not created)
- fixed XHTML validation error in the bookmarklet

Release 1.4 (2006-11-18)
- fixed lots of rendering issues (problems in IE, Blue-k2 theme, Golden Gray theme, reviews not expanding, etc.)
- completely rewritten encoding module, so now international characters as well as HTML should work correctly
- fix for Markdown markup - you can now use the alternate tag: <!--wp_movie_ratings_page--> to create a movie ratings page